--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,30 @@
     padding: 0;
     width: 100%;
     height: 85vh;
-    background-image: url(../images/land1.jpg);
+    margin-top: -31px;
+    background-image: url(../images/land2.jpg);
+    color: white;
 }
 body{
     margin: 0;
     padding: 0
+}
+
+/*STYLING FOR THE ELEMENTS INSIDE THE LANDING PAGE*/
+.name{
+    color: white;
+    font-family: alex-brush;
+    margin-left: 30%;
+
+}
+.front{
+    color: white;
+    font-family: alex-brush;
+    margin-left: 30%;
+
+}
+.mobile{
+    color: white;
+    font-family: alex-brush;
+    margin-left: 30%;
 }
