--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@
     width: 100%;
     height: 85vh;
     margin-top: -31px;
-    background-image: url(../images/land2.jpg);
+    background-image: url(../images/land3.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     color: white;
+
 }
 body{
     margin: 0;
@@ -18,15 +22,23 @@ body{
     font-family: alex-brush;
     margin-left: 30%;
 
+
 }
 .front{
     color: white;
     font-family: alex-brush;
     margin-left: 30%;
 
+
 }
 .mobile{
     color: white;
     font-family: alex-brush;
     margin-left: 30%;
+
 }
+.prof{
+    padding-top: 70px;
+}
+
+
