--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
+    overflow: hidden;
 
 }
 body{
@@ -50,13 +51,18 @@ body{
 }
 /*STYLING THE BIO SECTION*/
 #bio{
-    margin-left: 30%;
-    font-size: 16px;
+    text-align: center;
+    font-size: 20px;
     font-family: architects-daughter;
 }
 .thumb{
     color: purple;
 
 }
-
+.blue{
+    background-color: rgb(0,166,229);
+}
+.maroon{
+    color: maroon;
+}
 
