--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,10 @@ body{
     color: maroon;
 }
 
+/*Styling the Skills Section*/
+#skills{
+    margin-top: 50px;
+    padding-top: 50px;
+    text-align: center;
+}
+
