--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 body{
     margin: 0;
     padding: 0;
-    scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 /*STYLING FOR THE ELEMENTS INSIDE THE LANDING PAGE*/
@@ -26,6 +26,11 @@ body{
     margin-left: 30%;
 
 
+}
+.fax{
+    color: white;
+    height: 40px;
+    width: 40px;
 }
 .front{
     color: white;
