--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,12 @@ body{
 .col{
     display: inline-block;
 }
+#fuji{
+    width: 100%;
+    height: 500px;
+    background-image: url(../images/fuji.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    overflow: hidden;
+}
