--- a/css/style.css
+++ b/css/style.css
@@ -85,10 +85,13 @@ body{
 }
 #fuji{
     width: 100%;
-    height: 500px;
+    height: 300px;
     background-image: url(../images/fuji.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     overflow: hidden;
+}
+.int{
+    text-align: center;
 }
