--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,8 @@ body{
     text-align: center;
     font-size: 20px;
     font-family: architects-daughter;
+    background-color: #607D8B;
+    height: 100vh;
 }
 .thumb{
     color: purple;
@@ -118,3 +120,4 @@ form{
 .btn{
     padding-left: 30px;
 }
+/*for the navigation*/
