Finished adding the footer

--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,13 @@ form{
     padding-left: 30px;
 }
 /*for the navigation*/
+footer{
+ background-color: #263238;
+ margin-top: -15px;
+ margin-bottom: -10px;
+ color: white;
+ height: 90px;
+}
+.footer-copyright{
+    padding-top: 10px;
+}
