--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,11 @@ body{
 .center{
     text-align: center;
 }
+.move-right{
+    float: right;
+    color: white;
+    margin-bottom: 30px;
+}
 
 .thumb{
     color: purple;
@@ -111,10 +116,6 @@ body{
 .speed{
     margin-right: 3px;
 }
-footer{
-    margin-bottom: -20px;
-    background-color: #37474F;
-}
 .white{
     color: white;
     font-family: serif;
@@ -129,11 +130,26 @@ form{
 .btn{
     padding-left: 30px;
 }
-/*for the navigation*/
+/*For the portfolio section*/
+#portfolio{
+    height: 100vh;
+    width: 100%;
+    background-color: #78909C;
+}
+.btn-large{
+    background-color: #F57F17;
+    padding: 10px;
+}
+#tab-buttons{
+    padding-top: 60px;
+    padding-left: 30px;
+}
+.waves-effect waves-light btn-large{
+    padding: 10px;
+}
+/*for the footer*/
 footer{
  background-color: #263238;
- margin-top: -15px;
- margin-bottom: -10px;
  color: white;
  height: 90px;
 }
