--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ body{
     background-color: #607D8B;
     height: 100vh;
     padding-top: 160px;
+    width: 100%;
 }
 .chip{
     background-color: #37474F;
@@ -122,6 +123,19 @@ body{
     font-family: serif;
 }
 /*For scrolling the divs horizontaly*/
+/*
+#Horizontal-scroll{
+    width: 100%;
+    height: 100vh;
+    overflow:hidden;
+    white-space: nowrap;
+}
+*/
+/*
+.scrolling{
+     display: inline-block;
+}
+*/
 
 
 /*For the portfolio section*/
