--- a/css/style.css
+++ b/css/style.css
@@ -143,15 +143,47 @@ body{
     height: 100vh;
     width: 100%;
     background-color: #78909C;
+    margin-top: -27px;
 }
 .portfolio-navigator{
     float: left;
     height: 100vh;
     margin-left: -150px;
-    background-color: #263238;
+    margin-top: 30px;
 }
 .portfolio-section{
     background-color: yellow;
+}
+#show-web{
+    color: white;
+    text-decoration: none;
+    width: 100%;
+    height: 250px;
+    margin-top: 60px;
+}
+.port{
+    color: white;
+    text-align: center;
+    font-family: serif;
+    padding-top: 30px;
+}
+.btn{
+    height: 250px;
+    width: 200px;
+    margin-left: -20px;
+}
+#show-apps{
+    color: white;
+    text-decoration: none;
+    height: 250px;
+}
+#show-web:hover{
+    background-color: #78909C;
+    width: 100%;
+}
+#show-apps:hover{
+   background-color: #78909C;
+    width: 100%;
 }
 /*for the footer*/
 footer{
