--- a/css/style.css
+++ b/css/style.css
@@ -142,13 +142,12 @@ body{
 #portfolio{
     height: 100vh;
     width: 100%;
-    background-color: #78909C;
+    background-color: #BDBDBD;
     margin-top: -27px;
 }
 .portfolio-navigator{
     float: left;
     height: 100vh;
-    margin-left: -150px;
     margin-top: 30px;
 }
 .portfolio-section{
@@ -190,6 +189,7 @@ footer{
  background-color: #263238;
  color: white;
  height: 90px;
+
 }
 .footer-copyright{
     padding-top: 10px;
