sorted the buttons for the portfolio section

--- a/css/style.css
+++ b/css/style.css
@@ -145,13 +145,36 @@ body{
     background-color: #BDBDBD;
     margin-top: -27px;
 }
-.portfolio-navigator{
-    float: left;
-    height: 100vh;
-    margin-top: 30px;
+#portfolio h2{
+    color: white;
+    font-family: serif;
 }
-.portfolio-section{
-    background-color: yellow;
+#portfolio ul{
+
+}
+#portfolio ul li{
+    display: block;
+    color: white;
+    height: 45px;
+    width: 150px;
+    border: 1px solid white;
+    margin: 20px;
+    background-color: firebrick;
+    border-radius: 3px;
+}
+#portfolio ul li a{
+    color: white;
+    font-family: serif;
+    text-align: center;
+    margin-left: 35px;
+    font-size: 18px;
+    margin-top: 15px;
+
+
+
+}
+.vert{
+    color: white;
 }
 #show-web{
     color: white;
@@ -196,53 +219,15 @@ footer{
 }
 /*For navigation*/
 /*Css for the Tab layout*/
-.ui-tabs.ui-tabs-vertical {
-    padding: 0;
-    width: 42em;
+.port-nav{
+
 }
-.ui-tabs.ui-tabs-vertical .ui-widget-header {
-    border: none;
-}
-.ui-tabs.ui-tabs-vertical .ui-tabs-nav {
-    float: left;
-    width: 10em;
-    background: #CCC;
-    border-radius: 4px 0 0 4px;
-    border-right: 1px solid gray;
-}
-.ui-tabs.ui-tabs-vertical .ui-tabs-nav li {
-    clear: left;
-    width: 100%;
-    margin: 0.2em 0;
-    border: 1px solid gray;
-    border-width: 1px 0 1px 1px;
-    border-radius: 4px 0 0 4px;
-    overflow: hidden;
-    position: relative;
-    right: -2px;
-    z-index: 2;
-}
-.ui-tabs.ui-tabs-vertical .ui-tabs-nav li a {
+#portfolio .port-nav ul li a{
     display: block;
-    width: 100%;
-    padding: 0.6em 1em;
-}
-.ui-tabs.ui-tabs-vertical .ui-tabs-nav li a:hover {
-    cursor: pointer;
-}
-.ui-tabs.ui-tabs-vertical .ui-tabs-nav li.ui-tabs-active {
-    margin-bottom: 0.2em;
-    padding-bottom: 0;
-    border-right: 1px solid white;
-}
-.ui-tabs.ui-tabs-vertical .ui-tabs-nav li:last-child {
-    margin-bottom: 10px;
-}
-.ui-tabs.ui-tabs-vertical .ui-tabs-panel {
-    float: left;
-    width: 28em;
-    border-left: 1px solid gray;
-    border-radius: 0;
-    position: relative;
-    left: -1px;
+    width: 140px;
+    height: 25px;
+    background-color: firebrick;
+    color: white;
+    border: 1px solid white;
+
 }
