--- a/css/style.css
+++ b/css/style.css
@@ -40,25 +40,22 @@ body{
 .mobile{
     color: white;
     font-family: 'Lora', serif;
-    border-bottom: 2px solid white;
-    padding-top: 5px;
-    margin-left: 40px;
-
-}
+   }
 h1{
  font-family: 'Lora', serif;
+ margin-left: -70px;
 }
 .prof{
     padding-top: 150px;
+    padding-left: 100px;
 }
 .na{
     color: white;
-    padding-left: 45%;
-    padding-top: 70px;
-
+    padding-left: 300px;
+    margin-top: 280px;
 }
 .btn{
-
+  background-color: #00BCD4;
 }
 .Q{
     color: white;
@@ -156,6 +153,10 @@ h1{
     color: white;
     font-family: serif;
 }
+/*Styling for the contact section*/
+.input-field label {
+     color: #212121;
+   }
 /*for the footer*/
 footer{
  background-color: #263238;
@@ -175,11 +176,11 @@ footer{
 }
 .cont{
    margin-bottom: 30px;
-    margin-left: 560px;
+    margin-left: 400px;
     font-family: serif;
 }
 .conts{
-    margin-left: 400px;
+    margin-left: 267px;
 }
 
 .port-nav{
