--- a/css/style.css
+++ b/css/style.css
@@ -290,3 +290,7 @@ padding-top: 90px;
  .input-field input[type=text]:focus + label {
      color: white;
    }
+  .input-field input[type=text]:focus {
+     border-bottom: 1px solid white;
+     box-shadow: 0 1px 0 0 white;
+   }
