--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,6 @@ padding-top: 90px;
      border-bottom: 1px solid white;
      box-shadow: 0 1px 0 0 white;
    }
-#message{
+.materialize-textarea{
     color: white;
 }
