--- a/css/style.css
+++ b/css/style.css
@@ -297,5 +297,10 @@ padding-top: 90px;
 .materialize-textarea{
     color: white;
 }
-
+#full_name{
+    color: white;
+}
+#email{
+    color: white;
+}
 
