--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,9 @@ padding-right: 80px;
 #email{
     color: white;
 }
+.fa-arrow-circle-up{
+    color: white;
+}
 /*
 
 For the portfolio section*/
