--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,8 @@ myMenu{
 #bio{
     text-align: center;
     font-size: 20px;
-    font-family: 'Poiret One', cursive;
+  font-family: 'Raleway', sans-serif;
+    font-weight: 500;
     background-color: #607D8B;
     height: 100vh;
     width: 100%;
